feature: 图片随机排布

--- a/src/app/modules/gallery/gallery-unit/gallery-unit.component.html
+++ b/src/app/modules/gallery/gallery-unit/gallery-unit.component.html
@@ -1,1 +1,3 @@
-<p>{{galleryPicture.name}}</p>
+<div class="unit" [ngStyle]="{'top.px': galleryPicture.y, 'left.px': galleryPicture.x}">
+  <img [src]="galleryPicture.url" alt="">
+</div>
