--- a/src/app/modules/gallery/gallery/gallery.component.html
+++ b/src/app/modules/gallery/gallery/gallery.component.html
@@ -1,3 +1,3 @@
-<div>
+<div class="gallery" #gallery>
   <app-gallery-unit *ngFor="let o of (data|async)" [galleryPicture]="o"></app-gallery-unit>
 </div>
