feature: 图片随机排布

--- a/src/app/modules/gallery/gallery-unit/gallery-unit.component.less
+++ b/src/app/modules/gallery/gallery-unit/gallery-unit.component.less
@@ -1,3 +1,9 @@
 .unit {
   position: absolute;
+  .img {
+    width: 300px;
+  }
+  transition-property: top, left;
+  transition-duration: 0.8s;
+  transition-timing-function: ease-out;
 }
