feature: 重写布局函数以及点击图片自动居中

--- a/src/app/modules/gallery/gallery-unit/gallery-unit.component.html
+++ b/src/app/modules/gallery/gallery-unit/gallery-unit.component.html
@@ -1,3 +1,3 @@
-<div class="unit" [ngStyle]="{'top.px': galleryPicture.y, 'left.px': galleryPicture.x, 'transform': galleryPicture.rotate|numberToRotate}">
+<div [ngClass]="{'center': galleryPicture.isCenter}" class="unit" [ngStyle]="{'top.px': galleryPicture.y, 'left.px': galleryPicture.x, 'transform': galleryPicture.rotate|numberToRotate}">
   <img class="img" [src]="galleryPicture.url" alt="">
 </div>
