--- a/src/app/modules/gallery/gallery-unit/gallery-unit.component.less
+++ b/src/app/modules/gallery/gallery-unit/gallery-unit.component.less
@@ -1,9 +1,13 @@
 .unit {
+  cursor: pointer;
   position: absolute;
   .img {
     width: 300px;
   }
-  transition-property: top, left;
+  transition-property: top, left, transform;
   transition-duration: 0.8s;
   transition-timing-function: ease-out;
+}
+.center {
+  z-index: 1;
 }
