--- a/src/app/modules/gallery/gallery-unit/gallery-unit.component.less
+++ b/src/app/modules/gallery/gallery-unit/gallery-unit.component.less
@@ -1,13 +1,42 @@
 .unit {
   cursor: pointer;
   position: absolute;
+  width: 300px;
+  padding: 30px;
+  background-color: antiquewhite;
+  border: 1px black solid;
   .img {
-    width: 300px;
+    width: 100%;
+    transition-property: opacity;
+    transition-duration: 0.8s;
+    transition-timing-function: ease-out;
   }
-  transition-property: top, left, transform;
+  transition-property: top, left, transform, opacity;
   transition-duration: 0.8s;
   transition-timing-function: ease-out;
 }
 .center {
   z-index: 1;
+}
+.reverse {
+  transform: rotateY(180deg);
+  .img {
+    opacity: 0;
+  }
+  .text {
+    z-index: 2;
+  }
+}
+.text {
+  text-align: center;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  z-index: -1;
+  transform: rotateY(180deg);
+  .title {
+    margin-top: 35px;
+  }
 }
